--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+# root level is info
+
+logging.level.root=info
+
+# MyLogger logginge level is set to trace so that all messages will be shown
+
+logging.level.com.lohis.springcore.logging.MyLogger=trace
+
+logging.file.name=my.log
+
+
